--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+vendor/
+tests/
 composer.phar
-/vendor/
+composer.lock
+.DS_Store
+/node_modules
+/vendor
+.idea
+.idea/
+/.idea
+/.idea/*
+/.vscode
+/nbproject
+/.vagrant
+npm-debug.log
+yarn-error.log
+.phpunit.result.cache
 
-# Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+*.log
+*~
+
+\.php_cs\.cache
