Added PSR4 autoloader support

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "autoload": {
         "psr-4": {
+            "WelterRocks\\": "src",
             "Norgul\\Xmpp\\": "override/welterrocks/xmpp-php/src"
         }
     }
