--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,4 +44,6 @@ build: off
 test_script:
   - vendor\bin\phpcs . .\phpcs.xml
   - vendor\bin\phpmd .\src,.\tests text .\phpmd.xml
+  - vendor\bin\phpunit --coverage-xml .\phpunit.xml
+  
 
