--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "squizlabs/php_codesniffer": "3.4.2",
         "friendsofphp/php-cs-fixer": "3.0.x-dev",
         "norgul/xmpp-php": "2.2.3",
-        "phpseclib/phpseclib": "2.*"
+        "phpseclib/phpseclib": "2.*",
+        "ext-mosquitto": "0.4.0"
     },
     "autoload": {
         "psr-4": {
