Added MQTT to configuration files and tools

--- a/examples/ecophacs-sample-conf.ini
+++ b/examples/ecophacs-sample-conf.ini
@@ -3,3 +3,9 @@ continent=eu
 country=de
 account_id=your_ecovacs@email.bla
 password_hash=password
+mqtt_hostname=localhost
+mqtt_hostport=1883
+mqtt_username=mqtt
+mqtt_password=YOUR-MQTT-PASSWORD-HERE
+mqtt_client_id=EcoPhacs
+mqtt_topic=%prefix%/ecophacs/%device_type%/%device_id%/%suffix%
