--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ notifications:
   email:
     on_success: never
 before_script:
-  - composer install
+    - sudo pecl install mosquitto
+    - echo "extension=mosquitto.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+    - composer install
 script:
   # Search for PHP syntax errors.
   - find -L . -path ./vendor -prune -o -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l
