--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ notifications:
   email:
     on_success: never
 before_script:
-    - sudo pecl install mosquitto
+    - pecl install mosquitto
     - echo "extension=mosquitto.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
     - composer install
 script:
