--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ notifications:
   email:
     on_success: never
 before_script:
+    - add-apt-repository ppa:mosquitto-dev/mosquitto-ppa -y
+    - apt-get update -qq
+    - apt-get install -qq libmosquitto-dev
     - yes "\n" | pecl install "channel://pecl.php.net/mosquitto-0.4.0"
     - echo "extension=mosquitto.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
     - composer install
