--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ install:
   - choco install -y php --version %PHP_VERSION%
   - choco install -y composer
   - refreshenv
-  - composer install --no-interaction --no-progress --prefer-dist
+  - env COMPOSER=composer-appveyor.json composer install --no-interaction --no-progress --prefer-dist
   # Install XDebug for code coverage
   - ps: |
       $client = New-Object System.Net.WebClient
